CMakeLists.txt changed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,16 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Pang)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+if(NOT RAYLIB_INCLUDE_DIR)
+  set(RAYLIB_INCLUDE_DIR "raylib/include")
+endif()
+
+if(NOT RAYLIB_LIB_DIR)
+  set(RAYLIB_LIB_DIR "raylib/lib")
+endif()
+
 if(RAYLIB_INCLUDE_DIR)
   include_directories(BEFORE SYSTEM ${RAYLIB_INCLUDE_DIR})
 else()
@@ -10,7 +20,6 @@ endif()
 
 if(RAYLIB_LIB_DIR)
   link_directories(${RAYLIB_LIB_DIR})
-  link_directories(${RAYLIB_LIB_DIR}/external/glfw/src)
 else()
   message(STATUS "RAYLIB_LIB_DIR is not defined!")
 endif()
@@ -27,13 +36,7 @@ list(APPEND game_resources ${resources})
 
 add_executable(pang ${game_sources})
 target_link_libraries(pang raylib)
-
-# Windows
-target_link_libraries(pang winmm.lib)
-
-# Linux
-#target_link_libraries(pang glfw3)
-#target_link_libraries(pang dl)
-#target_link_libraries(pang pthread)
+target_link_libraries(pang dl)
+target_link_libraries(pang pthread)
 
 file(COPY ${game_resources} DESTINATION "res/")
